Corrección bad smells